--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="page-wrapper">
 			<header id="header">
-				<a id="logo1" href="index.html"><img src="logo3.png" alt="ACME Logo"></a>
+				<a id="logo1" href="index.html"><img src="images/logo3.png" alt="ACME Logo"></a>
 				<h1>My Demo Site</h1>
 			</header>
 			<nav id="main-nav">
@@ -59,7 +59,9 @@
 					</ol>
 				</aside>
 			</main>
-			<footer id = "footer" >Footer Content is here</footer>
+			<footer id = "footer" >
+				<p>Footer Content is here</p>
+			</footer>
 		</div>
 	</body>
 	
