--- a/index.html
+++ b/index.html
@@ -42,20 +42,16 @@
 						<li>List 4</li>        
 					</ul>
 					<div id="center">
-						<iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU frameborder="0" allowfullscreen></iframe>
+						<iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 				<aside id="side-content">
 					<h3>Interesting Articles</h3>
 					<ol id="news">
-						<a href="#"><li>Article 1</li></a>
-						<p>Preview of very interesting article article</p>
-						<a href="#"><li>Article 2</li></a>
-						<p> Preview of very interesting article article</p>
-						<a href="#"><li>Article 3</li></a>
-						<p>Preview of very interesting article article</p>
-						<a href="#"><li>Article 4</li></a>
-						<p>Preview of very interesting article article</p>
+						<li><a href="#">Article 1</a><p>Preview of very interesting article article</p></li>
+						<li><a href="#">Article 2</a><p>Preview of very interesting article article</p></li>
+						<li><a href="#">Article 3</a><p>Preview of very interesting article article</p></li>		
+						<li><a href="#">Article 4</a><p>Preview of very interesting article article</p></li>
 					</ol>
 				</aside>
 			</main>
